Support changes in Zuul 3 SQL reporter tables
Zuul 3 dropped the column 'score' in the table zuul_buildset.
